@@ -2,20 +2,19 @@ package ru.practicum.category.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import ru.practicum.category.mapper.CategoryMapper;
-import ru.practicum.category.repository.CategoryRepository;
 import ru.practicum.category.model.Category;
 import ru.practicum.category.model.CategoryDto;
 import ru.practicum.category.model.NewCategoryDto;
+import ru.practicum.category.repository.CategoryRepository;
 import ru.practicum.event.repository.EventRepository;
 import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -84,11 +83,10 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public List<CategoryDto> getCategories(int from, int size) {
-        Pageable pageable = PageRequest.of(from / size, size);
-        List<Category> categories = categoryRepository.findAll(pageable).getContent();
-
-        return categories.stream()
+        return categoryRepository.findWithOffset(from, size)
+                .stream()
                 .map(categoryMapper::toCategoryDto)
-                .toList();
+                .collect(Collectors.toList());
+
     }
 }
